# crates_docs_pdf

./: Cargo.toml  README.md  tauri.conf.json
capabilities/: default.json
frontend/: index.html  main.js  style.css
icons/: icon.icns
permissions/: allow-custom-commands.toml
src/: appwindow.slint  main.rs
