[package]
name = "crates_docs_pdf"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
futures = "0.3.32"
genpdf = "0.2.0"
reqwest = { version = "0.13.4", features = ["json"] }
scraper = "0.27.0"
url = "2.5.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tauri = { version = "2", features = ["image-png"] }

[build-dependencies]
tauri-build = "2"
